--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -40,3 +40,8 @@ library aocsplit
   hs-source-dirs:  lib
   exposed-modules: AdventOfCode.Split
   build-depends:   base
+
+executable 01_trebuchet
+  import: bin, flags
+  build-depends: base, adventofcode2023
+  main-is:       01_trebuchet.hs
