--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -50,3 +50,8 @@ executable 02_cube_conundrum
   import: bin, flags
   build-depends: base, adventofcode2023, aocsplit
   main-is:       02_cube_conundrum.hs
+
+executable 03_gear_ratios
+  import: bin, flags
+  build-depends: base, adventofcode2023, array, containers
+  main-is:       03_gear_ratios.hs
