--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -55,3 +55,8 @@ executable 03_gear_ratios
   import: bin, flags
   build-depends: base, adventofcode2023, array, containers
   main-is:       03_gear_ratios.hs
+
+executable 04_scratchcards
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, containers
+  main-is:       04_scratchcards.hs
