--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -60,3 +60,8 @@ executable 04_scratchcards
   import: bin, flags
   build-depends: base, adventofcode2023, aocsplit, containers
   main-is:       04_scratchcards.hs
+
+executable 05_seed_fertiliser
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit
+  main-is:       05_seed_fertiliser.hs
