--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -70,3 +70,8 @@ executable 06_wait_for_it
   import: bin, flags
   build-depends: base, adventofcode2023
   main-is:       06_wait_for_it.hs
+
+executable 07_camel_cards
+  import: bin, flags
+  build-depends: base, adventofcode2023, containers
+  main-is:       07_camel_cards.hs
