--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -75,3 +75,8 @@ executable 07_camel_cards
   import: bin, flags
   build-depends: base, adventofcode2023, containers
   main-is:       07_camel_cards.hs
+
+executable 08_haunted_wasteland
+  import: bin, flags
+  build-depends: base, adventofcode2023, containers
+  main-is:       08_haunted_wasteland.hs
