--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -95,3 +95,8 @@ executable 11_cosmic_expansion
   import: bin, flags
   build-depends: base, adventofcode2023, containers
   main-is:       11_cosmic_expansion.hs
+
+executable 12_hot_springs
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, containers
+  main-is:       12_hot_springs.hs
