--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -110,3 +110,8 @@ executable 14_parabolic_reflector_dish
   import: bin, flags
   build-depends: base, adventofcode2023, containers
   main-is:       14_parabolic_reflector_dish.hs
+
+executable 15_lens_library
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, array
+  main-is:       15_lens_library.hs
