--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -131,3 +131,8 @@ executable 17_clumsy_crucible
   import: bin, flags
   build-depends: base, adventofcode2023, aocsearch, array
   main-is:       17_clumsy_crucible.hs
+
+executable 18_lavaduct_lagoon
+  import: bin, flags
+  build-depends: base, adventofcode2023
+  main-is:       18_lavaduct_lagoon.hs
