--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -136,3 +136,8 @@ executable 18_lavaduct_lagoon
   import: bin, flags
   build-depends: base, adventofcode2023
   main-is:       18_lavaduct_lagoon.hs
+
+executable 19_aplenty
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, containers
+  main-is:       19_aplenty.hs
