--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -146,3 +146,9 @@ executable 20_pulse_propagation
   import: bin, flags
   build-depends: base, adventofcode2023, aocsplit, containers
   main-is:       20_pulse_propagation.hs
+
+executable 21_step_counter
+  import: bin, flags
+  -- !? added in array 0.5.6.0
+  build-depends: base, adventofcode2023, array >= 0.5.6.0, containers
+  main-is:       21_step_counter.hs
