--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -152,3 +152,8 @@ executable 21_step_counter
   -- !? added in array 0.5.6.0
   build-depends: base, adventofcode2023, array >= 0.5.6.0, containers
   main-is:       21_step_counter.hs
+
+executable 22_sand_slabs
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, containers
+  main-is:       22_sand_slabs.hs
