--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -157,3 +157,9 @@ executable 22_sand_slabs
   import: bin, flags
   build-depends: base, adventofcode2023, aocsplit, containers
   main-is:       22_sand_slabs.hs
+
+executable 23_a_long_walk
+  import: bin, flags
+  -- !? added in array 0.5.6.0
+  build-depends: base, adventofcode2023, aocsearch, array >= 0.5.6.0, containers, mtl
+  main-is:       23_a_long_walk.hs
