--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -163,3 +163,8 @@ executable 23_a_long_walk
   -- !? added in array 0.5.6.0
   build-depends: base, adventofcode2023, aocsearch, array >= 0.5.6.0, containers, mtl
   main-is:       23_a_long_walk.hs
+
+executable 24_never_tell_me_the_odds
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit
+  main-is:       24_never_tell_me_the_odds.hs
