--- a/adventofcode.cabal
+++ b/adventofcode.cabal
@@ -168,3 +168,8 @@ executable 24_never_tell_me_the_odds
   import: bin, flags
   build-depends: base, adventofcode2023, aocsplit
   main-is:       24_never_tell_me_the_odds.hs
+
+executable 25_snowverload
+  import: bin, flags
+  build-depends: base, adventofcode2023, aocsplit, containers
+  main-is:       25_snowverload.hs
